--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "amazon-cognito-auth-js": "^1.3.2",
+    "aws-amplify": "^1.1.32",
+    "aws-amplify-react": "^2.3.11",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
