--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "amazon-cognito-auth-js": "^1.3.2",
     "aws-amplify": "^1.1.32",
     "aws-amplify-react": "^2.3.11",
+    "env-cmd": "^9.0.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
@@ -16,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:staging": "env-cmd -f .env.staging npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
