Add api host to env

--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,3 @@
 REACT_APP_COGNITO_AUTH_CLIENT_ID=1rq85hp3c2pii4k294297b28ef
-REACT_APP_THANKSHELL_API_VERSION=dev
+REACT_APP_THANKSHELL_API_HOST=staging-api.thankshell.com
+REACT_APP_THANKSHELL_API_VERSION=v1
