--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:staging": "env-cmd -f .env.staging npm run build"
+    "build:staging": "./node_modules/.bin/env-cmd -f .env.staging npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
