--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-event-listener": "^0.6.6",
     "react-markdown": "^4.1.0",
     "react-modal": "^3.10.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
