--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "amazon-cognito-auth-js": "^1.3.2",
-    "aws-amplify": "^1.1.36",
-    "aws-amplify-react": "^2.3.12",
+    "aws-amplify": "^1.3.3",
+    "aws-amplify-react": "^2.6.3",
     "env-cmd": "^9.0.3",
-    "mdbreact": "^4.19.0",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.9.0",
+    "mdbreact": "^4.24.0",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
     "react-event-listener": "^0.6.6",
-    "react-markdown": "^4.1.0",
-    "react-modal": "^3.10.1",
+    "react-markdown": "^4.3.1",
+    "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "redux": "^4.0.4"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
