Add production build command

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "build:production": "npm run build",
     "build:staging": "./node_modules/.bin/env-cmd -f .env.staging npm run build"
   },
   "eslintConfig": {
