--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-amplify": "^1.3.3",
     "aws-amplify-react": "^2.6.3",
     "env-cmd": "^9.0.3",
+    "glamor": "^2.20.40",
     "mdbreact": "^4.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -17,6 +18,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-svg": "^11.0.12",
     "redux": "^4.0.5"
   },
   "scripts": {
