--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,2 @@
 REACT_APP_COGNITO_AUTH_CLIENT_ID=dodes0n9dnt7llvaq2od4mif4
-REACT_APP_THANKSHELL_API_HOST=api.thankshell.com
-REACT_APP_THANKSHELL_API_VERSION=v2
+REACT_APP_THANKSHELL_API_URL=https://api.thankshell.com/v2
