--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,2 @@
 REACT_APP_COGNITO_AUTH_CLIENT_ID=1rq85hp3c2pii4k294297b28ef
-REACT_APP_THANKSHELL_API_HOST=staging-api.thankshell.com
-REACT_APP_THANKSHELL_API_VERSION=v1
+REACT_APP_THANKSHELL_API_URL=https://staging-api.thankshell.com/v1
