--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "env-cmd": "^9.0.3",
     "glamor": "^2.20.40",
     "mdbreact": "^4.24.0",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-event-listener": "^0.6.6",
     "react-markdown": "^4.3.1",
