--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-tabs": "^1.3.2",
     "react-scripts": "^3.3.0",
     "react-svg": "^11.0.12",
     "redux": "^4.0.5"
