Fix tsconfig import path

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
+NODE_PATH=src
 REACT_APP_COGNITO_AUTH_CLIENT_ID=dodes0n9dnt7llvaq2od4mif4
 REACT_APP_THANKSHELL_API_URL=https://api.thankshell.com/v2.0
