--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,3 @@
+NODE_PATH=src
 REACT_APP_COGNITO_AUTH_CLIENT_ID=1rq85hp3c2pii4k294297b28ef
 REACT_APP_THANKSHELL_API_URL=https://staging-api.thankshell.com/v2.0
