--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.15.0",
   "private": true,
   "dependencies": {
+    "@types/react-modal": "^3.10.6",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-tabs": "^1.3.1",
     "amazon-cognito-auth-js": "^1.3.2",
     "aws-amplify": "^1.3.3",
     "aws-amplify-react": "^2.6.3",
