--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "amazon-cognito-auth-js": "^1.3.2",
     "aws-amplify": "^1.3.3",
     "aws-amplify-react": "^2.6.3",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "env-cmd": "^9.0.3",
     "glamor": "^2.20.40",
     "mdbreact": "^4.24.0",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "typescript-plugin-css-modules": "^2.7.0"
   }
 }
