Drop redux package

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@types/react-modal": "^3.10.6",
-    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-router-tabs": "^1.3.1",
     "amazon-cognito-auth-js": "^1.3.2",
@@ -22,12 +21,10 @@
     "react-event-listener": "^0.6.6",
     "react-markdown": "^4.3.1",
     "react-modal": "^3.11.1",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-tabs": "^1.3.2",
     "react-scripts": "^3.3.0",
-    "react-svg": "^11.0.12",
-    "redux": "^4.0.5"
+    "react-svg": "^11.0.12"
   },
   "scripts": {
     "start": "REACT_APP_VERSION=$(node -pe 'require(\"./package.json\").version') react-scripts start",
