--- a/package.json
+++ b/package.json
@@ -6,25 +6,22 @@
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-router-tabs": "^1.3.1",
-    "amazon-cognito-auth-js": "^1.3.2",
-    "aws-amplify": "^1.3.3",
-    "aws-amplify-react": "^2.6.3",
-    "babel-plugin-react-css-modules": "^5.2.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-markdown": "^4.3.1",
+    "react-modal": "^3.11.1",
+    "react-scripts": "^3.3.0",
+    "react-svg": "^11.0.12",
+    "typescript": "^3.9.6",
+    "typescript-plugin-css-modules": "^2.7.0",
     "env-cmd": "^9.0.3",
     "glamor": "^2.20.40",
     "mdbreact": "^4.24.0",
     "qrcode.react": "^1.0.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.12.0",
-    "react-event-listener": "^0.6.6",
-    "react-markdown": "^4.3.1",
-    "react-modal": "^3.11.1",
-    "react-router-dom": "^5.1.2",
-    "react-router-tabs": "^1.3.2",
-    "react-scripts": "^3.3.0",
-    "react-svg": "^11.0.12"
+    "amazon-cognito-auth-js": "^1.3.2"
   },
   "scripts": {
     "start": "REACT_APP_VERSION=$(node -pe 'require(\"./package.json\").version') react-scripts start",
@@ -36,7 +33,10 @@
     "create-version-file": "echo \"{\\\"version\\\": \\\"$(node -pe 'require(\"./package.json\").version')\\\"}\" > public/revision.json"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -49,9 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^3.9.6",
-    "typescript-plugin-css-modules": "^2.7.0"
   }
 }
