--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "@types/react-router-tabs": "^1.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-markdown": "^4.3.1",
-    "react-modal": "^3.11.1",
     "react-scripts": "^3.3.0",
-    "react-svg": "^11.0.12",
     "typescript": "^3.9.6",
-    "typescript-plugin-css-modules": "^2.7.0",
-    "env-cmd": "^9.0.3",
-    "glamor": "^2.20.40",
-    "mdbreact": "^4.24.0",
-    "qrcode.react": "^1.0.1",
-    "amazon-cognito-auth-js": "^1.3.2"
+    "react-router-dom": "^5.1.2",
+    "react-bootstrap": "^2.0.0",
+    "react-copy-to-clipboard": "^5.0.0",
+    "react-markdown": "^7.0.0",
+    "react-modal": "^3.0.0",
+    "react-svg": "^14.0.0",
+    "typescript-plugin-css-modules": "^3.0.0",
+    "env-cmd": "^10.0.0",
+    "glamor": "^2.0.0",
+    "mdbreact": "^5.0.0",
+    "qrcode.react": "^1.0.0",
+    "amazon-cognito-auth-js": "^1.0.0"
   },
   "scripts": {
     "start": "REACT_APP_VERSION=$(node -pe 'require(\"./package.json\").version') react-scripts start",
