--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "1.19.1",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.4.4",
+    "web-vitals": "^1.1.2",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.0.0",
     "@types/react-router-tabs": "^1.3.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0",
-    "typescript": "^3.9.6",
     "react-router-dom": "^6.0.0",
     "react-bootstrap": "^2.0.0",
     "react-copy-to-clipboard": "^5.0.0",
