--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2",
-    "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.0.0",
-    "@types/react-router-tabs": "^1.3.1",
+    "@types/react-copy-to-clipboard": "^5.0.0",
+    "@types/react-modal": "^3.10.6",
+    "@types/qrcode.react": "^1.0.0",
+    "@types/amazon-cognito-auth-js": "^1.0.0",
     "react-router-dom": "^6.0.0",
     "react-bootstrap": "^2.0.0",
     "react-copy-to-clipboard": "^5.0.0",
