Change auth client id

--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,8 @@
 NODE_PATH=src
-REACT_APP_COGNITO_AUTH_CLIENT_ID=1rq85hp3c2pii4k294297b28ef
-REACT_APP_COGNITO_AUTH_APP_WEB_DOMAIN=auth2.thankshell.com
 REACT_APP_THANKSHELL_API_URL=https://staging-api.thankshell.com/v2.0
+
+REACT_APP_COGNITO_AUTH_CLIENT_ID=artuvgio1jsetqk2p55v6sc5m
+REACT_APP_COGNITO_AUTH_APP_WEB_DOMAIN=legacy-thankshell.auth.ap-northeast-1.amazoncognito.com
+# FIXME: Facebook auth is not working
+# REACT_APP_COGNITO_AUTH_CLIENT_ID=1rq85hp3c2pii4k294297b28ef
+# REACT_APP_COGNITO_AUTH_APP_WEB_DOMAIN=auth2.thankshell.com
