--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,8 @@
 NODE_PATH=src
-REACT_APP_COGNITO_AUTH_CLIENT_ID=dodes0n9dnt7llvaq2od4mif4
-REACT_APP_COGNITO_AUTH_APP_WEB_DOMAIN=auth2.thankshell.com
 REACT_APP_THANKSHELL_API_URL=https://api.thankshell.com/v2.0
+
+REACT_APP_COGNITO_AUTH_CLIENT_ID=43r1jq51brs240ml1fuegj8e2t
+REACT_APP_COGNITO_AUTH_APP_WEB_DOMAIN=legacy-thankshell.auth.ap-northeast-1.amazoncognito.com
+# FIXME: Facebook auth is not working
+# REACT_APP_COGNITO_AUTH_CLIENT_ID=dodes0n9dnt7llvaq2od4mif4
+# REACT_APP_COGNITO_AUTH_APP_WEB_DOMAIN=auth2.thankshell.com
